Fixed some bugs with image handling on mobile

--- a/public/less/one-offs/gallery.less
+++ b/public/less/one-offs/gallery.less
@@ -183,19 +183,33 @@
       display: none;
     }
     &.active{
-      position: static;
+      position: relative;
       img{
         &.small{
           display: block;
         }
       }
       .fullContainer{
+        z-index: 100;
         @media (max-width: 767px) {
+          opacity: 1;
+          display: block;
           position: absolute;
+          left: 0;
+          top: 0;
+          border:5px solid transparent;
+          img{
+            position: relative;
+            left: -5px;
+            top: -5px;
+            height: auto;
+            width: auto;
+            max-width: ~"calc(100% + 10px)";
+            max-height: ~"calc(100% + 10px)";
+          }
         }
         @media (min-width: 768px) {
           opacity: 1;
-          z-index: 100;
           height: 100%;
           width: 100%;
           left: 0;
@@ -229,17 +243,17 @@
             left: 0;
             top: 50px;
           }
-        }
-        img{
-          .box-sizing(border-box);
-          height: auto;
-          max-height: 100%;
-          max-width: 100%;
-          border: 5px solid white;
-          .border-radius(2px);
-          min-height: 100px;
-          min-width: 100px;
-          z-index: 1;
+          img{
+            .box-sizing(border-box);
+            height: auto;
+            max-height: 100%;
+            max-width: 100%;
+            border: 5px solid white;
+            .border-radius(2px);
+            min-height: 100px;
+            min-width: 100px;
+            z-index: 1;
+          }
         }
       }
     }
